# racing_stack_asuf1tenth

./: Makefile  README.md  docker-compose.yaml  this_revision.md
.devcontainer/: Dockerfile
.install_utils/: basalt_ros_setup.sh  python_req.txt
.install_utils/linux_req/: linux_req.txt
autodrive_roboracer/: requirements_python_3.12.txt
autodrive_roboracer/autodrive_roboracer/: autodrive_bridge.py
controller/controller/: controller_manager.py
f110_autodrive/: README.md  package.xml  setup.cfg  setup.py  testing_guide.md
f110_autodrive/f110_autodrive/: __init__.py  autodrive_adapter.py  autodrive_controller_wrapper.py  autodrive_state_machine_wrapper.py  dummy_publisher.py
f110_autodrive/launch/: autodrive_ftg_launch.xml  autodrive_launch.xml  autodrive_mapping_launch.xml  autodrive_system_launch.xml
pbl_config/: README.md  package.xml  setup.cfg  setup.py
pbl_config/pbl_config/: CarConfig.py  PacejkaTireConfig.py  __init__.py  params.py  paths.py
planner/global_planner/: setup.py
planner/local_planners/local_planner/: package.xml  setup.py
planner/local_planners/local_planner/launch/: local_planner_launch.xml
planner/local_planners/local_planner/local_planner/: local_planner.py  local_planner_params.py
scripts/: test_autodrive_e2e.sh
stack_master/: README.md  setup.py
stack_master/config/: global_params.yaml  local_planner_params.yaml  state_machine_params.yaml
stack_master/launch/: base_system_launch.xml  head_to_head_launch.xml  mapping_launch.xml  planner_launch.xml  teleop_launch.xml
state_estimation/: package.xml  setup.py
(+15 files in other folders)
